--- a/pages/index/addProject/addProject.json
+++ b/pages/index/addProject/addProject.json
@@ -1,6 +1,7 @@
 {
 	"navigationBarTitleText": "创建项目",
 	"usingComponents": {  
-    	"lists": "../../components/lists/lists"
+    	"lists": "../../components/lists/lists",
+    	"listsForPicker": "../../components/listsForPicker/listsForPicker"
 	}
 }
